2018-02-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/taper.pl: Fix

2018-02-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/cmdfile.c (free_cmddata): Do not declare static
	* server-src/cmdfile.h (free_cmddata): Add prototype
	* client-src/client_util.c, common-src/pipespawn.c
	  server-src/driver.c server-src/driverio.c
	  server-src/holding.c server-src/planner.c
	  server-src/server_util.c: Fix memory leak

2018-02-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/server_util.c: Fix memory handling and leak

2018-02-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl: Call _get_pg_version after
	  setting $self->{'props'}->{'psql-path'}

2018-01-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Vault.pm: Run the driver if run_delayed is set
	* server-src/amvault.pl: New --run-delayed argument
	* man/xml-source/amvault.8.xml: Document it
	* NEWS, ReleaseNotes: Add it

2018-01-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Vault.pm: Add vault command to the commands table if
	  delayed is set
	* server-src/amvault.pl: New --delayed argument
	* man/xml-source/amvault.8.xml: Document it
	* NEWS, ReleaseNotes: Add it

2018-01-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Vault.pm: Verify the dump is not already in the dest
	  storage if uniq is set
	* server-src/amvault.pl: New --uniq, --no-uniq argument
	* man/xml-source/amvault.8.xml: Document it
	* NEWS, ReleaseNotes: Add it

2018-01-30  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl: exclude pg_wal/*

2018-01-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c server-src/planner.c: Don't do some check
	  if --no-dump or no storage defined

2018-01-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* man/xml-source/amanda-changers.7.xml: Document the diskflat changer